# dst

./: README.md  env.txt  main.py  pyproject.toml
config/: settings.yaml
src/backend/: ai_engine.py  model_manager.py
src/core/: db.py  resources.py  storage.py
src/ui/: audio.py  model_control.py
static/: manifest.json
